--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="popup-root"></div>
     <script type="module" src="/src/index.jsx"></script>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
