--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="root"></div>
     <div id="popup-root"></div>
     <script type="module" src="/src/index.jsx"></script>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
       // https://github.com/rafgraph/spa-github-pages
@@ -37,6 +37,6 @@
           );
         }
       })(window.location);
-    </script>
+    </script> -->
   </body>
 </html>
