--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="popup-root"></div>
     <script type="module" src="/src/index.jsx"></script>
     <div id="kwizbot_widget"></div>
+    <div id="kwizbot_widget"></div>
     <script defer>
       (function (k, w, i, z, b, o, t) {
         k["KwizbotWidget"] = b;
@@ -35,9 +36,8 @@
         "https://widget.kwizbot.io/kwjs_v2.js",
         "kw"
       );
-
       kw("init", {
-        language_code: "ru",
+        language_code: "uk",
         bot_id: "261",
         params_from_site: {},
         v2_value: ".demo",
@@ -45,7 +45,6 @@
         btn_restart_enabled: false,
       });
     </script>
-    widget-demo
 
     <!-- <script type="text/javascript">
       // Single Page Apps for GitHub Pages
