--- a/index.html
+++ b/index.html
@@ -11,10 +11,19 @@
     <div id="popup-root"></div>
     <script type="module" src="/src/index.jsx"></script>
     <div id="kwizbot_widget"></div>
-    <script defer>
-    (function (k, w, i, z, b, o, t) {k['KwizbotWidget'] = b; k[b] = k[b] || function () { w.head.insertAdjacentHTML('beforeend', '<style type="text/css">.showAfterCssLoaded{display: none}</style>'); (k[b].q = k[b].q || []).push(arguments) }, k[b].l = 1 * new Date(); o = w.createElement(i), t = w.getElementsByTagName(i)[0]; o.async = 1; o.src = z; t.parentNode.insertBefore(o, t) })(window, document, 'script', 'https://widget-anc.kwizbot.io/kwjs.js', 'kw');
-    kw('init', {"language_code":"uk","bot_id":"3","params_from_site":{},"open_on_msg":false,"btn_restart_enabled":false}) 
-    </script>
+<script defer>
+(function (k, w, i, z, b, o, t) {k['KwizbotWidget'] = b; k[b] = k[b] || function () { w.head.insertAdjacentHTML('beforeend', '<style type="text/css">.showAfterCssLoaded{display: none}</style>'); (k[b].q = k[b].q || []).push(arguments) }, k[b].l = 1 * new Date(); o = w.createElement(i), t = w.getElementsByTagName(i)[0]; o.async = 1; o.src = z; t.parentNode.insertBefore(o, t) })(window, document, 'script', 'https://widget-anc.kwizbot.io/kwjs.js', 'kw');
+kw('init', {"language_code":"uk","bot_id":"3","params_from_site":{},"displayMode":"widget","colors":{
+  "device":{"bg":"#FFFFFF","dot":"#188BE4","border":"#188BE4","container":"#FFDD00"},
+  "keyboardButton":{"border":"#188BE4","bg":"#188BE4","text":"#FFFFFF"},
+  "header":{"bg":"#FFDD00","text":"#188BE4"},
+  "poweredLink":{"color":"#188BE4"},
+  "userInput":{"bg":"#FFFFFF","border":"#f4f7f9","text":"#565867"},
+  "sentMessage":{"bg":"#F4F7F9","text":"#188BE4"},
+  "receivedMessage":{"bg":"#eaeaea","text":"#222222"},
+  "inlineKeyboardButton":{"bg":"#188BE4","text":"#FFFFFF","bgc":"#FFDD00"}
+},"widgetButton":{"type":"bar","position":{"y":"bottom","x":"right","offset":25,"offset_y":null,"offset_x":null}},"launcher":{"type":"icon","closeIcon":"close","openIcon":"chat_bubble"},"open_on_msg":false,"btn_restart_enabled":false}) 
+</script>
 
     <!-- <script type="text/javascript">
       // Single Page Apps for GitHub Pages
