--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 (function (k, w, i, z, b, o, t) {k['KwizbotWidget'] = b; k[b] = k[b] || function () { w.head.insertAdjacentHTML('beforeend', '<style type="text/css">.showAfterCssLoaded{display: none}</style>'); (k[b].q = k[b].q || []).push(arguments) }, k[b].l = 1 * new Date(); o = w.createElement(i), t = w.getElementsByTagName(i)[0]; o.async = 1; o.src = z; t.parentNode.insertBefore(o, t) })(window, document, 'script', 'https://widget-anc.kwizbot.io/kwjs.js', 'kw');
 kw('init', {"language_code":"uk","bot_id":"3","params_from_site":{},"displayMode":"widget","colors":{
   "device":{"bg":"#FFFFFF","dot":"#188BE4","border":"#188BE4","container":"#FFDD00"},
-  "keyboardButton":{"border":"#188BE4","bg":"#188BE4","text":"#FFFFFF"},
+  "keyboardButton":{"border":"#D14EE0","bg":"#D14EE0","text":"#FFFFFF"},
   "header":{"bg":"#FFDD00","text":"#188BE4"},
   "poweredLink":{"color":"#188BE4"},
   "userInput":{"bg":"#FFFFFF","border":"#f4f7f9","text":"#565867"},
