--- a/index.html
+++ b/index.html
@@ -11,18 +11,25 @@
     <div id="popup-root"></div>
     <script type="module" src="/src/index.jsx"></script>
     <div id="kwizbot_widget"></div>
-<script defer>
-(function (k, w, i, z, b, o, t) {k['KwizbotWidget'] = b; k[b] = k[b] || function () { w.head.insertAdjacentHTML('beforeend', '<style type="text/css">.showAfterCssLoaded{display: none}</style>'); (k[b].q = k[b].q || []).push(arguments) }, k[b].l = 1 * new Date(); o = w.createElement(i), t = w.getElementsByTagName(i)[0]; o.async = 1; o.src = z; t.parentNode.insertBefore(o, t) })(window, document, 'script', 'https://widget-anc.kwizbot.io/kwjs.js', 'kw');
-kw('init', {"language_code":"uk","bot_id":"3","params_from_site":{},"displayMode":"widget","colors":{
-  "device":{"bg":"#FFFFFF","dot":"#188BE4","border":"#188BE4","container":"#FFDD00"},
-  "keyboardButton":{"border":"#D14EE0","bg":"#D14EE0","text":"#FFFFFF"},
-  "header":{"bg":"#FFDD00","text":"#188BE4"},
-  "poweredLink":{"color":"#188BE4"},
-  "userInput":{"bg":"#FFFFFF","border":"#f4f7f9","text":"#565867"},
-  "sentMessage":{"bg":"#F4F7F9","text":"#188BE4"},
-  "receivedMessage":{"bg":"#eaeaea","text":"#222222"},
-  "inlineKeyboardButton":{"bg":"#188BE4","text":"#FFFFFF","bgc":"#FFDD00"}
-},"launcher":{"type":"icon","closeIcon":"close","openIcon":"chat_bubble"},"open_on_msg":false,"btn_restart_enabled":false}) 
+    <div id="iframeHolder"></div>
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+      let src =
+      "https://smartkasa.kwizbot.io/autologin?en&user=admin@evergreens.in.ua&redirect_module=OperatorPanelChats&login_key=5E3mq71cYFL6r5*3";
+
+      function createFrame() {
+        let frame = document.createElement("iframe");
+        frame.setAttribute("src", src);
+        frame.setAttribute("name", "Kwizbot");
+        frame.setAttribute("id", "frame");
+        frame.frameBorder = 0;
+        frame.width = 100 + "%";
+        frame.height = 700 + "px";
+        document.getElementById("iframeHolder").appendChild(frame);
+      }
+
+      createFrame();
+    });
 </script>
 
 <!-- <script defer>
